@@ -3,6 +3,14 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+drkns 25.04.2019 22:42:44 +0100 - build 5389
+
+1. 0003706: Pressing Enter clears the selection in the current line.
+
+svs 24.04.2019 16:11:54 +0300 - build 5388
+
+1. SQLite 3.28.0
+
 drkns 18.04.2019 21:59:52 +0100 - build 5387
 
 1. New fmt version.
