@@ -1,3 +1,7 @@
+drkns 25.04.2019 22:42:44 +0100 - build 5389
+
+1. 0003706: При нажатии Enter сбрасывается выделение в текущей строке
+
 svs 24.04.2019 16:11:54 +0300 - build 5388
 
 1. SQLite 3.28.0
